# GenericCryptanalyzer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  abstractbitshiftbox.cpp  abstractbitshiftbox.h  abstractbox.cpp  abstractbox.h  cipheranalyzer.cpp  cipheranalyzer.h  diffCharFinder.pro  ebox.cpp  ebox.h  helpers.cpp  helpers.h  identitybox.cpp  identitybox.h  main.cpp  pbox.cpp  pbox.h  roundfunction.cpp  roundfunction.h  sbox.cpp  sbox.h  xbox.cpp  xbox.h  xorbox.cpp  xorbox.h
.github/workflows/: build_test_ci.yml  c-cpp.yml
docs/: .doxygen.css.swp  abstractbitshiftbox_8h.html  abstractbitshiftbox_8h.js  abstractbitshiftbox_8h_source.html  abstractbox_8h.html  abstractbox_8h.js  abstractbox_8h_source.html  abstractboxbuilder_8h_source.html  annotated.html  annotated_dup.js  cipheranalyzer_8h.html  cipheranalyzer_8h.js  cipheranalyzer_8h_source.html  cipheranalyzerbuilder_8h_source.html  class_abstract_bit_shift_box.html  class_abstract_bit_shift_box.js  class_abstract_box.html  class_abstract_box.js  class_abstract_box_builder.html  class_cipher_analyzer.html  class_cipher_analyzer.js  class_cipher_analyzer_builder.html  class_e_box.html  class_e_box.js  class_e_box_builder.html  class_identity_box.html  class_identity_box.js  class_identity_box_builder.html  class_p_box.html  class_p_box.js  class_p_box_builder.html  class_round_builder.html  class_round_function.html  class_round_function.js  class_s_box.html  class_s_box.js  class_s_box_builder.html  class_xor_box.html  class_xor_box.js  class_xor_box_builder.html  (+52 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+35 more)
examples/: des.cpp  des_boxes.h  des_function.cpp  present.cpp  simplecipher.cpp  speck32_64.cpp
src/: cipheranalyzer.cpp  cipheranalyzer.h  roundfunction.cpp  roundfunction.h
src/box/: abstractbitshiftbox.cpp  abstractbitshiftbox.h  abstractbox.cpp  abstractbox.h  ebox.cpp  ebox.h  identitybox.cpp  identitybox.h  pbox.cpp  pbox.h  sbox.cpp  sbox.h  xorbox.cpp  xorbox.h
src/builders/: abstractboxbuilder.cpp  abstractboxbuilder.h  cipheranalyzerbuilder.cpp  cipheranalyzerbuilder.h  eboxbuilder.cpp  eboxbuilder.h  identityboxbuilder.cpp  identityboxbuilder.h  pboxbuilder.cpp  pboxbuilder.h  roundbuilder.cpp  roundbuilder.h  sboxbuilder.cpp  sboxbuilder.h  xorboxbuilder.cpp  xorboxbuilder.h
src/helpers/: helpers.cpp  helpers.h
tests/: test_boxes.cpp  test_helpers.cpp
